bin/testsuite/tests/compiler/src/errors/compiler4721.swg
#global testerror "Err0137"
//private alias B = u32
private public func toto4721(b: s32) {}
